# OtterDNS

./: Cargo.toml  README.md  clippy.toml
benches/: dns_benchmark.rs
dnsproto/: Cargo.toml
dnsproto/benches/: dns_benchmark.rs
dnsproto/src/: dnsname.rs  edns.rs  errors.rs  label.rs  lib.rs  message.rs  meta.rs  record.rs  utils.rs  zone.rs
dnsproto/src/qtype/: a.rs  aaaa.rs  cname.rs  dnskey.rs  ds.rs  helper.rs  loc.rs  mod.rs  mx.rs  ns.rs  nsec.rs  nsec3.rs  opt.rs  ptr.rs  rrsig.rs  soa.rs  srv.rs  txt.rs
dnsproto/src/types/: a.rs  aaaa.rs  mod.rs  ns.rs  opt.rs  soa.rs
otter/: Cargo.toml  example.config.yaml
otter/src/: main.rs  server.rs
otterlib/: Cargo.toml  example.config.yaml
otterlib/src/: errors.rs  lib.rs  server.rs  setting.rs
server/: Cargo.toml
server/src/: lib.rs  otter_server.rs  server.rs  tcp_server.rs  udp_server.rs
src/: lib.rs  main.rs
src/dns/: dns_type.rs  domain.rs  errors.rs  label.rs  labels.rs  message.rs  mod.rs  record.rs  utils.rs  zone.rs
src/dns/types/: a.rs  aaaa.rs  mod.rs  soa.rs
src/zone/: mod.rs  zone.rs
storage/: Cargo.toml
storage/benches/: storage_benchmark.rs
storage/playground/: flatten.rs  rbtree.rs  smart_point.rs
storage/src/: errors.rs  lib.rs  rb_storage.rs  rbtree.rs  safe_rbtree.rs  storage.rs  sync.rs  unsafe_rbtree.rs
storage/test/: root.zone
tests/: Cargo.toml
tests/src/: lib.rs
utils/: Cargo.toml
