[package]
name = "otterdns"
version = "0.1.0"
authors = ["mike zhang <zhangmingkai.1989@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "otterlib"
path = "src/lib.rs"

[[bin]]
name = "otterdns"
path = "src/main.rs"


[dependencies]
strum = "0.19"
strum_macros = "0.19"
itertools = "0.9.0"