[package]
name = "dnsproto"
version = "0.1.0"
authors = ["mike zhang <zhangmingkai.1989@gmail.com>"]
edition = "2018"


[dependencies]
num_enum = "0.5.1"
strum = "0.19"
strum_macros = "0.19"
itertools = "0.9.0"
regex = "1"
nom = "6"
thiserror = "1.0.24"
byteorder = "1.4.3"
rand = "0.8.3"
lazy_static = "1.4.0"
base64 = "0.13.0"
chrono = "0.4"
otterlib = {path = "../otterlib"}
data-encoding = "2.3.2"
ring = "0.16.20"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "dns_benchmark"
harness = false