[package]
name = "otter"
version = "0.1.0"
authors = ["zhangmingkai4315 <zhangmingkai19892013@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dnsproto = { path = "../dnsproto", version = "0.1.0"}
storage = { path = "../storage", version = "0.1.0"}
otterlib = { path = "../otterlib", version = "0.1.0"}
tokio = { version = "1.5.0", features = ["full"] }