[package]
name = "otter"
version = "0.1.0"
authors = ["zhangmingkai4315 <zhangmingkai19892013@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
num_cpus = "1.13.0"
log = "0.4"
env_logger = "0.8"
tokio = { version = "1.5.0", features = ["full"] }
server = { path = "../server", version = "0.1.0"}
dnsproto = { path = "../dnsproto", version = "0.1.0"}
otterlib = { path = "../otterlib", version = "0.1.0"}

