[package]
name = "otterlib"
version = "0.1.0"
authors = ["zhangmingkai4315 <zhangmingkai19892013@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.10"
lazy_static = "^0.2.8"
serde_derive = "^1.0.8"
serde = { version = "1.0.8", features = ["derive"] }
validator = { version = "0.12", features = ["derive"] }
thiserror = "1.0.24"
nom = "6"
