[package]
name = "server"
version = "0.1.0"
authors = ["zhangmingkai4315 <zhangmingkai19892013@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
slog = { version = "2.7.0" , features = ["max_level_trace", "release_max_level_warn"] }
slog-async = "2.6.0"
slog-term = "2.8.0"

dnsproto = { path = "../dnsproto", version = "0.1.0"}
storage = { path = "../storage", version = "0.1.0"}
otterlib = { path = "../otterlib", version = "0.1.0"}
