[package]
name = "storage"
version = "0.1.0"
authors = ["zhangmingkai4315 <zhangmingkai19892013@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
sys-info = "0.8"
dnsproto = {path = "../dnsproto"}
