[package]
name = "storage"
version = "0.1.0"
authors = ["zhangmingkai4315 <zhangmingkai19892013@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
sys-info = "0.8"
lazy_static = "1.4.0"
dnsproto = {path = "../dnsproto"}
[dev-dependencies]
criterion = "0.3"


[[bench]]
name = "storage_benchmark"
harness = false